Fixes some spacings in the system section.

--- a/scss/_system_section.scss
+++ b/scss/_system_section.scss
@@ -84,6 +84,7 @@
     .system__navigation--container {
         max-width: 573px;
         margin-block-start: 133px;
+        margin-inline-start: 40px;
     }
     
     .system__list_item {
